feat: PUT camera/{id}/transform
